--- a/index.html
+++ b/index.html
@@ -61,13 +61,11 @@
 			<nav id="nav">
 				<ul class="main-nav nav navbar-nav navbar-right">
 					<li><a href="#home">Home</a></li>
-					<li><a href="#live">Live</a></li>
 					<li><a href="#about">About</a></li>
 					<li><a href="#schedule">Schedule</a></li>
 					<li><a href="#speakers">Speakers</a></li>
-					<!--<li><a href="#sponsors">Sponsors</a></li>-->
+					<li><a href="#live">Live</a></li>
 					<li><a href="#contact">Contact</a></li>
-					<!--<li><a href="blog.html">Blog</a></li>-->
 				</ul>
 			</nav>
 			<!-- /Navigation -->
@@ -105,9 +103,6 @@
 		<!-- /home wrapper -->
 	</div>
 	<!-- /Home -->
-	<div id="live">
-		<iframe src="https://events.google.com/io/embed" style="width:100%;height:100vh" frameborder="0" allowfullscreen></iframe>
-	</div>
 	<!-- About -->
 	<div id="about" class="section">
 		<!-- container -->
@@ -444,6 +439,13 @@
 		<!-- /container -->
 	</div>
 	<!-- /CTA -->
+
+	<!-- live -->
+	<div id="live">
+		<iframe src="https://events.google.com/io/embed" style="width:100%;height:100vh" frameborder="0" allowfullscreen></iframe>
+	</div>
+	<!-- /live -->
+
 
 	<!-- Contact -->
 	<div id="contact" class="section">
